8173468: Font.loadFont returns null on some Ubuntu 32bits

Reviewed-by: prr